# FocusLock

./: .gitignore  CHANGELOG.md  IMPLEMENTATION_PLAN.md  LICENSE  README.en.md  README.md  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
.github/scripts/: setup-cargo-ci.ps1
.github/workflows/: release.yml
scripts/: gen_icon.py  gen_tray_icons.py  gen_tray_rgba.py
src/: App.vue  main.ts  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/.cargo/: config.toml
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: commands.rs  config.rs  lib.rs  main.rs  notify.rs  overlay.rs  shortcut.rs  state.rs  tray.rs  tray_icons.rs
src-tauri/src/engine/: mod.rs  reset.rs  stage.rs  timer.rs
src-tauri/src/platform/: macos.rs  mod.rs  windows.rs
src/locales/: en.ts  index.ts  zh.ts
src/utils/: sound.ts
src/views/: Overlay.vue  PeriodEndOverlay.vue  Settings.vue
